--- a/example2.html
+++ b/example2.html
@@ -1,8 +1,7 @@
 <html>
 <head>
 <script src="https://chirimen.org/chirimen-raspi3/release/cdn/polyfill.js"></script>
-<!--<script src="http://chirimen.org/chirimen-raspi3/release/cdn/i2c-arduino-steppingMotor.js"></script>-->
-<script src="https://www.g200kg.com/demo/chirimen/gc/drivers/i2c-arduino-steppingMotor.js"></script>
+<script src="https://chirimen.org/chirimen-raspi3/release/cdn/i2c-arduino-steppingMotor.js"></script>
 
 <script>
 'use strict';
@@ -30,6 +29,7 @@ window.addEventListener('load', async ()=>{
 </script>
 </head>
 <body>
+  <h1>CHIRIMEN Arduino steppingMotor : Example 2</h1>
   <div id="head"></div>
 </body>
 </html>
