--- a/example3.html
+++ b/example3.html
@@ -2,8 +2,7 @@
 <head>
 <meta charset="utf-8">
 <script src="https://chirimen.org/chirimen-raspi3/release/cdn/polyfill.js"></script>
-<!--<script src="http://chirimen.org/chirimen-raspi3/release/cdn/i2c-arduino-steppingMotor.js"></script>-->
-<script src="https://www.g200kg.com/demo/chirimen/gc/drivers/i2c-arduino-steppingMotor.js"></script>
+<script src="https://chirimen.org/chirimen-raspi3/release/cdn/i2c-arduino-steppingMotor.js"></script>
 
 <script>
 'use strict';
